<resources>
    <string name="app_name">OkroAppTest</string>
    <string name="landing_screen">Landing Screen</string>
    <string name="image">image</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="open_next_screen">Open Next Screen</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
</resources>
