<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvVerifyMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_mobile"
        android:textSize="15sp"
        android:textColor="@color/hex"
        android:layout_gravity="center"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#bababa"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:textSize="18sp"
        android:textColor="@color/hex"
        android:textColorHint="#bababa"
        android:padding="10dp"
        android:background="@drawable/edittextbg"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@drawable/btnbg"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>